# php-cqrs

./: .env  .envrc  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  .prettierignore  .tool-versions  Brewfile  Gemfile  Makefile  README.md  compose.yml  composer.json  deptrac.yaml  docker-sync.yml  grumphp.yml  infection.json5.dist  package.json  phpcs.dist.xml  phpmd.dist.xml  phpmetrics.yml  phpunit.dist.xml  psalm.xml  pyproject.toml
.dev/env/: .envrc.build
.dev/hooks/: commit-msg  pre-commit
.dev/make/: docker.mk  php.mk
.dev/sh/: auth.sh
.dev/templates/: .env.auth.tmpl  .env.local.tmpl  .envrc.local.tmpl  .envrc.local.tpl  auth.json.tmpl
docs/coverage/: Bus.php.html  Bus.php_branch.html  Bus.php_path.html  Handler.php.html  Handler.php_branch.html  Handler.php_path.html  Message.php.html  Message.php_branch.html  Message.php_path.html  dashboard.html  index.html
docs/coverage/Bus/: CommandBus.php.html  CommandBus.php_branch.html  CommandBus.php_path.html  QueryBus.php.html  QueryBus.php_branch.html  QueryBus.php_path.html  Type.php.html  Type.php_branch.html  Type.php_path.html  dashboard.html  index.html
docs/coverage/Exception/: CqrsException.php.html  CqrsException.php_path.html  (+3 more)
docs/metrics/: report.csv  report.json  violations.xml
src/: Bus.php  Handler.php  Message.php
src/Bus/: CommandBus.php  QueryBus.php  Type.php
src/Exception/: CqrsException.php
src/Handler/: CommandHandler.php  QueryHandler.php  Type.php
src/Message/: Command.php  Query.php  Result.php  Type.php
tests/: bootstrap.php
tests/src/: bootstrap.php
(+183 files in other folders)
