[project]
name = "docker-php"
version = "0.1.0"
description = "Ready-made docker image"
authors = [
    {name = "Barney Hanlon",email = "barney@7daysperformance.co.uk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pre-commit (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
